--- a/styles/room.css
+++ b/styles/room.css
@@ -177,6 +177,7 @@
 #stream__box{
   background-color: #3f434a;
   height: 60vh;
+  display: none;
 }
 
 #streams__container{
@@ -194,7 +195,7 @@
   justify-content: center;
   align-items: center;
   border: 2px solid #a8b0e8;
-  border-radius: 50%;
+  border-radius: 10%;
   cursor: pointer;
   overflow: hidden;
   height: 300px;
@@ -207,7 +208,7 @@
 }
 
 .video-player video{
-  border-radius:50% ;
+  border-radius:10% ;
 }
 
 @media (max-width: 1400px) {
