--- a/styles/room.css
+++ b/styles/room.css
@@ -185,6 +185,8 @@
   border-radius: 0;
   height: 100%!important;
   width: 100%!important;
+
+  background-size: 350px;
 }
 
 #stream__box video{
@@ -211,6 +213,11 @@
   overflow: hidden;
   height: 300px;
   width: 300px;
+
+  background-image: url("/images/logo.png");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: 85px;
 }
 
 .video-player{
